[package]
name = "strontiumdb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A globally-distributed SQL database with adaptive sub-microsecond clock synchronization for true external consistency"
repository = "https://github.com/strontiumdb/strontiumdb"
readme = "README.md"
keywords = ["database", "distributed", "truetime", "spanner"]
categories = ["database-implementations"]

[dependencies]
thiserror = "2"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "time", "fs"] }
tokio = { version = "1", features = ["time", "sync", "rt", "process"] }
rocksdb = "0.22"
parking_lot = "0.12"

# Security
ring = "0.17"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "1.0"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

# Cloud KMS (optional features)
aws-config = { version = "1.5", optional = true }
aws-sdk-kms = { version = "1.52", optional = true }

# Azure Key Vault (optional) - must use compatible versions from same SDK release
azure_core = { version = "0.30", optional = true }
azure_identity = { version = "0.30", optional = true }
azure_security_keyvault_keys = { version = "0.9", optional = true }

# GCP Cloud KMS (optional)
google-cloud-kms = { version = "0.5", optional = true }

# Async runtime
async-trait = "0.1"

# Logging/Audit
tracing = "0.1"

# Caching
lru = "0.12"

[features]
default = []
aws-kms = ["aws-config", "aws-sdk-kms"]
azure-kms = ["azure_core", "azure_identity", "azure_security_keyvault_keys"]
gcp-kms = ["google-cloud-kms"]
all-kms = ["aws-kms", "azure-kms", "gcp-kms"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "time_service"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "transactions"
harness = false

[[bench]]
name = "security"
harness = false
